--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,11 +17,14 @@
         border-radius: 10px;
     }
 
-    @media (min-width: 1240px) {
+    @media (min-width: 900px) {
         width: 75%;
         height: 78.5%;
+    }
 
-
+    @media (min-width: 1440px) {
+        width: 75%;
+        height: 78.5%;
     }
 }
 
@@ -38,8 +41,19 @@
     height: 310px;
     padding-top: 2.4em;
 
+    @media (min-width: 900px) {
+        height: 100vh;
+        position: absolute;
+        width: 50%;
+        left: 46%;
+        background-size: 85%;
+        z-index: -1;
+        background-position-x: center;
+        background-position-y: center;
+        @include d.flex(center, center);
+    }
 
-    @media (min-width: 1240px) {
+    @media (min-width: 1440px) {
         height: 100vh;
         position: absolute;
         width: 50vw;
@@ -66,7 +80,12 @@
         overflow: hidden;
         box-shadow: 0px 0px 100px 10px hsl(240, 38%, 20%);
 
-        @media (min-width: 1240px) {
+        @media (min-width: 900px) {
+            top: 82%;
+            left: 23%;
+        }
+
+        @media (min-width: 1440px) {
             width: 7em;
             height: 3.5em;
             top: 78%;
@@ -101,13 +120,17 @@ main {
     background-repeat: no-repeat;
     background-position-y: bottom;
 
-    @media (min-width: 1200px) {
+    @media (min-width: 900px) {
+        @include d.flex(flex-start, center, row);
+        padding-top: 0;
+        gap: 0em;
+        isolation: isolate; //This fixed the issue with hover effect on slider button
+        background-size: 43%;
+    }
+
+    @media (min-width: 1440px) {
         @include d.flex(flex-start, center, row);
         flex-flow: row;
-        background-size: 43%;
-        gap: 0em;
-        padding-top: 0;
-        isolation: isolate; //This fixed the issue with hover effect on slider button
     }
 
     .content-section {
@@ -119,7 +142,13 @@ main {
         gap: 1.1em;
         font-size: 1.1rem;
 
-        @media (min-width: 1240px) {
+        @media (min-width: 900px) {
+            width: 80%;
+            @include d.flex(flex-start, flex-start, column);
+            font-size: 28px;
+        }
+
+        @media (min-width: 1440px) {
             width: 100%;
             font-size: 32px;
             line-height: 45px;
@@ -140,7 +169,16 @@ main {
             width: 28ch;
             position: relative;
 
-            @media (min-width: 1240px) {
+            @media (min-width: 900px) {
+                text-align: left;
+                width: 38ch;
+                font-size: 1.5rem;
+                line-height: 2rem;
+                padding-left: 10%;
+                margin-left: 13%;
+            }
+
+            @media (min-width: 1440px) {
                 width: 37ch;
                 padding-top: 0em;
                 padding-left: 5px;
@@ -148,7 +186,12 @@ main {
                 letter-spacing: -0.0065em;
                 padding-top: 0px;
                 pointer-events: none;
+                font-size: 32px;
+                margin: 0;
+
             }
+
+
 
             &::before {
                 content: url(../public/images/pattern-quotes.svg);
@@ -157,21 +200,38 @@ main {
                 left: 40%;
                 zoom: 50%;
 
-                @media (min-width: 1240px) {
+                @media (min-width: 900px) {
+                    zoom: 80%;
+                    left: 28%;
+                    top: -33%;
+                }
+
+                @media (min-width: 1440px) {
                     zoom: 100%;
-                    top: -30%;
+                    top: -43%;
                     left: 13%;
                 }
+
+
             }
         }
 
         .writer-container {
-            @media(min-width: 1240px) {
+            @media (min-width: 900px) and (max-width: 1439px) {
+                padding-left: 10%;
+                margin-left: 13%;
+            }
+
+            @media(min-width: 900px) {
                 display: flex;
                 width: 100%;
                 align-items: center;
-                gap: 0.2em;
+                gap: 0.5em;
             }
+
+
+
+
 
             .writer {
                 @include d.fontWeightSelector(map-get(d.$font-weight, "weight-3"));
