--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -145,6 +145,7 @@ main {
         @media (min-width: 900px) {
             width: 80%;
             @include d.flex(flex-start, flex-start, column);
+            line-height: 35px;
             font-size: 28px;
             @include d.fontWeightSelector(map-get(d.$font-weight, "weight-2"));
         }
